// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-userpilot destination: identifyUser action - all fields 1`] = `
Object {
  "metadata": Object {
    "testType": "M$1cygYLnFIAN[odj0",
  },
  "user_id": "M$1cygYLnFIAN[odj0",
}
`;

exports[`Testing snapshot for actions-userpilot destination: identifyUser action - required fields 1`] = `
Object {
  "metadata": Object {},
}
`;

exports[`Testing snapshot for actions-userpilot destination: trackEvent action - all fields 1`] = `
Object {
  "event_name": "ddp1]2QQKul0]eJ",
  "metadata": Object {
    "testType": "ddp1]2QQKul0]eJ",
  },
  "user_id": "ddp1]2QQKul0]eJ",
}
`;

exports[`Testing snapshot for actions-userpilot destination: trackEvent action - required fields 1`] = `
Object {
  "event_name": "ddp1]2QQKul0]eJ",
  "user_id": "ddp1]2QQKul0]eJ",
}
`;
